# SchoolProject

./: .gitmodules  CMakeLists.txt
core/includes/: Application.hpp  Event.hpp  Log.hpp  Window.hpp
core/src/: Application.cpp  UIModule.cpp  Window.cpp
main/: main.cpp
main/includes/: Interface.hpp
main/src/: Interface.cpp
models/includes/: Gravity.hpp
models/src/: Gravity.cpp
